2010-06-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* PolicyBasedHttpWebRequest.cs: Implement ContentLength for both
	stacks

2010-06-21  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs: AllowWriteStreamBuffering is always 
	true (getter) and cannot be set (NotSupportedException)
	* ClientHttpWebRequest.cs: Add get/set AllowWriteStreamBuffering
	property override
	* PolicyBasedHttpWebRequest.cs: Remove AllowWriteStreamBuffering
	property override since it differs between the two stacks

2010-05-19  Andreia Gaita  <avidigal@novell.com>

	* BrowserHttpWebRequestInternal.cs: Keep the dispatcher around, it
	  needs to be alive for the callback

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* BrowserHttpWebRequestInternal.cs: Update to HttpRequest API.

	* BrowserHttpWebResponse.cs: Update to HttpRequest API. This means it is not
	necessary to store a GCHandle to self in an instance field, since the only
	place we use it (to visit the response headers), we can free it immediately
	when done. This also makes the Dispose method empty, so it has been removed,
	which also caused the Abort method to become empty, so that too has been
	removed.

	* BrowserHttpWebRequest.cs: Remove the abort method, it's empty now since
	BrowserHttpWebResponse's Abort method is empty too.

2010-05-20  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebResponse.cs: Fix ContentLength when the response 
	does not provide a Content-Length header. Fix for DRT#664

2010-05-17  Sebastien Pouliot  <sebastien@ximian.com>

	* PolicyBasedHttpWebRequest.cs: Same fix as previous (typo) when 
	a flash policy is used (previous case covers a SL policy)

2010-05-18  Andreia Gaita  <avidigal@novell.com>

	* PolicyBasedHttpWebRequest.cs: headers should be sent with the main
	request

2010-05-14  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs:
	* ClientHttpWebRequest.cs:
	* PolicyBasedHttpWebRequest.cs: